--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 journey-code-test-ios.xcodeproj/project.xcworkspace/xcuserdata/jay.xcuserdatad
+journey-code-test-ios.xcodeproj/xcuserdata/jay.xcuserdatad
