--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 journey-code-test-ios.xcodeproj/project.xcworkspace/xcuserdata/jay.xcuserdatad
 journey-code-test-ios.xcodeproj/xcuserdata/jay.xcuserdatad
 coding-test-app.xcodeproj/project.xcworkspace/xcuserdata/jay.xcuserdatad
+coding-test-app.xcodeproj/xcuserdata/jay.xcuserdatad
